--- a/user_inventory/request_in_detail_disetujui.html
+++ b/user_inventory/request_in_detail_disetujui.html
@@ -271,10 +271,16 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Request In </h3>
+										Request </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
 										<a href="user_inventory/request_in.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_inventory/request_in.html" class="kt-subheader__breadcrumbs-link">
+											Request in </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_inventory/request_in_detail_disetujui.html" class="kt-subheader__breadcrumbs-link">
+											Request details </a>
 									</div>
 								</div>
 							</div>
