--- a/user_admin/listTreatment_detail_done.html
+++ b/user_admin/listTreatment_detail_done.html
@@ -431,6 +431,15 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         <textarea class="form-control" id="exampleTextarea" rows="3" name="complaint_text" placeholder="Complaint..."></textarea>
                                                     </div>
                                                 </div>
+												<div class="form-group row">
+													<div class="col-8 offset-4">
+														<label class="kt-checkbox">
+															<input type="checkbox" name="complaint_garansi"> Gunakan garansi
+															<span></span>
+														</label><br>
+														<!-- <a href="#"><span class="form-test ">Syarat & ketentuan berlaku</span></a> -->
+													</div>
+												</div>
 	                                        </div>
 	                                        <div class="modal-footer" style="justify-content:center;">
 	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
