--- a/user_admin/finance_laporanKeuangan.html
+++ b/user_admin/finance_laporanKeuangan.html
@@ -537,9 +537,12 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
+		<!-- <script src="assets/js/tscomp/typescript.min.js" type="text/javascript"></script>
+		<script src="assets/js/tscomp/typescript.compile.min.js" type="text/javascript"></script> -->
 		<script src="assets/js/vendor/amcharts/core.js" type="text/javascript"></script>
 		<script src="assets/js/vendor/amcharts/charts.js" type="text/javascript"></script>
 		<script src="assets/js/vendor/amcharts/animated.js" type="text/javascript"></script>
+		<!-- <script src="assets/js/vendor/amcharts/lang_id.ts" type="text/typescript"></script> -->
 
 		<!--end::Page Vendors -->
 
