--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -329,15 +329,10 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<form id="kt_form_treatment">
 											<div class="kt-portlet__body">
-												<!-- <div class="form-group">
-													<label class="form-control-label">No. Telepon :</label>
-													<select class="form-control kt-select2" id="kt_select2_treatment_customer_nohp" name="treatment_customer_nohp"></select>
-													<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
-												</div> -->
 												<div class="form-group">
 													<label class="form-control-label">No. Telepon :</label>
 													<div class="typeahead">
-														<input class="form-control" id="kt_typehead" placeholder="No. Telepon">
+														<input class="form-control" id="treatment_customer_nohp" name="treatment_customer_nohp" placeholder="No. Telepon">
 													</div>
 													<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
 												</div>
@@ -397,7 +392,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="form-group row">
 													<label class="col-sm-4 col-form-label">Nama :</label>
 													<div class="col-sm-8">
-														<input type="text" class="form-control" name="customer_nama" placeholder="Nama">
+														<input type="text" class="form-control" name="customer_nama" placeholder="Nama" readonly>
 													</div>
 												</div>
 												<div class="form-group row">
@@ -581,82 +576,36 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<script>
 			// Bloodhound Remote
-			// var bloodhound = new Bloodhound({
-			// 	datumTokenizer: function(datum) {
-			// 		return Bloodhound.tokenizers.whitespace(datum.value);
-			// 	},
-			// 	queryTokenizer: Bloodhound.tokenizers.whitespace,
-			// 	remote: {
-			// 		wildcard: '%QUERY',
-			// 		url: 'http://api.themoviedb.org/3/search/movie?query=%QUERY&api_key=f22e6ce68f5e5002e71c20bcba477e7d',
-			// 		transform: function(response) {
-			// 			// Map the remote source JSON array to a JavaScript object array
-			// 			return $.map(response.results, function(movie) {
-			// 				return {
-			// 					value: movie.original_title
-			// 				};
-			// 			});
-			// 		}
-			// 	}
-			// });
-
 			var bloodhound = new Bloodhound({
-			   datumTokenizer: Bloodhound.tokenizers.whitespace,
-			   queryTokenizer: Bloodhound.tokenizers.whitespace,
-			   remote: {
+				datumTokenizer: Bloodhound.tokenizers.whitespace,
+				queryTokenizer: Bloodhound.tokenizers.whitespace,
+				remote: {
 				   wildcard: '%QUERY',
-				   url: 'source/admin/customer_bloodhound.json',
+				   url: 'source/admin/customer_terdaftar.php?query=%QUERY',
 				   transform: function(response) {
-					   console.log(response);
 					   // Map the remote source JSON array to a JavaScript object array
 					   return $.map(response, function(customer) {
 						   return {
-							   no_hp: customer.no_hp,
+							   no_hp: customer.number,
 							   nama: customer.nama
 						   };
 					   });
 				   }
-			   }
-		   });
+				}
+			});
 
-			$('#kt_typehead').typeahead(null, {
+			$('#treatment_customer_nohp').typeahead({
+	            hint: true,
+	            highlight: true,
+	            minLength: 1
+	        }, {
 				display: 'no_hp',
 				source: bloodhound
 			});
 
-			$('#kt_select2_treatment_customer_nohp').change(function () {
-				var dataArray = $('#kt_select2_treatment_customer_nohp').select2('data');
-				document.getElementById("treatment_customer_nama").setAttribute('value',dataArray[0].nama);
+			$('#treatment_customer_nohp').on('typeahead:autocompleted typeahead:select', function (e, data) {
+			    $('#treatment_customer_nama').val(data.nama);
 			});
-
-			// Select2 ajax
-			// $('#kt_select2_treatment_customer_nohp').select2({
-			// 	multiple: true,
-			// 	maximumSelectionSize: 1,
-			// 	maximumSelectionLength: 1,
-			// 	placeholder: 'No. Telepon',
-			// 	ajax: {
-			// 		url: 'source/admin/customer_select2.php',
-			// 		dataType: 'json',
-			// 		delay: 250,
-			// 		processResults: function (data) {
-			// 			return {
-			// 				results: $.map(data, function(item) {
-			// 					return {
-			// 						text: item.number,
-			// 						nama: item.nama,
-			// 						id: item.id
-			// 					}
-			// 				})
-			// 			}
-			// 		},
-			// 	}
-			// });
-			//
-			// $('#kt_select2_treatment_customer_nohp').change(function () {
-			// 	var dataArray = $('#kt_select2_treatment_customer_nohp').select2('data');
-			// 	document.getElementById("treatment_customer_nama").setAttribute('value',dataArray[0].nama);
-			// });
 
 			// Sweetalert
 			$('.kt_sweetalert_berhasil').click(function(e) {
@@ -754,7 +703,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	                    digits: true
 	                },
 	                treatment_customer_nama: {
-	                    required: true
+	                    required: false
 	                },
 	                treatment_type: {
 	                    required: true
