table-striped removed

--- a/user_admin/finance_pemasukan.html
+++ b/user_admin/finance_pemasukan.html
@@ -345,7 +345,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_finance_pemasukan"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_finance_pemasukan"></table>
 										</div>
 										<div class="kt-portlet__foot kt-hidden">
 											<div class="row">
