--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -471,7 +471,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															</div>
 		    											</div>
 		    										</form>
-													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_treatment"></table>
+													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_treatment"></table>
 												</div>
 												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
 													<form class="kt-margin-b-10">
@@ -489,7 +489,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															</div>
 		    											</div>
 		    										</form>
-													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_kehadiran"></table>
+													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_kehadiran"></table>
 												</div>
 												<div class="tab-pane" id="tab-payroll" role="tabpanel">
 													<form class="kt-margin-b-10">
@@ -504,7 +504,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															</div>
 		    											</div>
 		    										</form>
-													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_payroll"></table>
+													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_payroll"></table>
 													<div class="col-12" style="padding:0;">
 														<div class="col-12 justify-end" style="padding:0; margin-bottom: 20px;">
 															<h4 class="kt-portlet__head-titlek">
