--- a/user_admin/customer_detail.html
+++ b/user_admin/customer_detail.html
@@ -365,7 +365,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_customer_detail"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_customer_detail"></table>
 										</div>
 									</div>
 
