--- a/user_admin/finance_pengeluaran_detail.html
+++ b/user_admin/finance_pengeluaran_detail.html
@@ -360,7 +360,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 												</div>
                                             </div>
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_pengeluaran_detail">
+        									<table class="table table-bordered table-hover table-checkable" id="table_pengeluaran_detail">
         										<thead>
         											<tr>
         												<th>No.</th>
