--- a/user_admin/listTreatment_all.html
+++ b/user_admin/listTreatment_all.html
@@ -345,7 +345,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_all"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_treatment_all"></table>
 										</div>
 									</div>
 
