--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -363,7 +363,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_therapist">Ka</th>
                                                 </tr> -->
                                             </table>
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
+        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
                                             <div class="col-12 justify-end" style="padding: 0px 0px">
                                                 <div style="text-align:right;width:50%">
                                                     <span class="kt-font-bold">Sub-Total :</span>&nbsp;
