--- a/user_inventory/request_in.html
+++ b/user_inventory/request_in.html
@@ -321,7 +321,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_request_in"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_request_in"></table>
 										</div>
 									</div>
 
