--- a/user_inventory/request_out.html
+++ b/user_inventory/request_out.html
@@ -324,7 +324,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_request_out"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_request_out"></table>
 										</div>
 									</div>
 
