--- a/user_inventory/stock_detail.html
+++ b/user_inventory/stock_detail.html
@@ -352,7 +352,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_stock_detail"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_stock_detail"></table>
 										</div>
 										<div class="kt-portlet__foot kt-hidden">
 											<div class="row">
