--- a/user_superadmin/finance_pemasukan.html
+++ b/user_superadmin/finance_pemasukan.html
@@ -374,7 +374,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_finance_pemasukan"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_finance_pemasukan"></table>
 										</div>
 									</div>
 
