--- a/user_superadmin/finance_pengeluaran.html
+++ b/user_superadmin/finance_pengeluaran.html
@@ -377,7 +377,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_finance_pengeluaran"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_finance_pengeluaran"></table>
 										</div>
 									</div>
 
