--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -359,7 +359,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_karyawan"></table>
 										</div>
 										<div class="kt-portlet__foot kt-hidden">
 											<div class="row">
