--- a/user_superadmin/md_treatment.html
+++ b/user_superadmin/md_treatment.html
@@ -359,7 +359,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_data_treatment"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_data_treatment"></table>
 										</div>
 									</div>
 
