--- a/user_superadmin/request.html
+++ b/user_superadmin/request.html
@@ -371,7 +371,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_request"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_request"></table>
 										</div>
 									</div>
 
