--- a/user_superadmin/stock.html
+++ b/user_superadmin/stock.html
@@ -356,7 +356,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_stock"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_stock"></table>
 										</div>
 									</div>
 
