--- a/user_superadmin/treatment_detail_scheduled.html
+++ b/user_superadmin/treatment_detail_scheduled.html
@@ -374,7 +374,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_therapist">Ka</th>
                                                 </tr>
                                             </table>
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
+        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
                                             <div class="col-12">
 												<div class="row justify-end" style="padding: 0px; margin-top:50px;">
 													<div class="col-6 justify-end" style="padding: 0px">
