--- a/user_superadmin/treatment_detail_unpaid.html
+++ b/user_superadmin/treatment_detail_unpaid.html
@@ -386,7 +386,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_therapist">Ka</th>
                                                 </tr>
                                             </table>
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
+        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
 												<button type="button" class="btn btn-link" style="padding-right:0px;"><i class="flaticon-add"></i>Tambah Treatment</button>
 											</div>
