--- a/user_therapist/complaint.html
+++ b/user_therapist/complaint.html
@@ -317,7 +317,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_complaint"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_complaint"></table>
 										</div>
 									</div>
 
