--- a/user_therapist/inventory.html
+++ b/user_therapist/inventory.html
@@ -321,7 +321,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_inventory"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_inventory"></table>
 										</div>
 									</div>
 
