--- a/user_therapist/treatment_detail_done.html
+++ b/user_therapist/treatment_detail_done.html
@@ -315,7 +315,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
                                             </table>
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
+        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
 												<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_tambah_treatment"><i class="flaticon-add"></i>Tambah Treatment</button>
 											</div>
