--- a/user_therapist/treatment_detail_waiting.html
+++ b/user_therapist/treatment_detail_waiting.html
@@ -313,7 +313,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
                                             </table>
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
+        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px; position: relative;">
 		                                            <table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
