--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -339,29 +339,41 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="form-group">
 													<label class="form-control-label">Nama :</label>
 													<input type="text" class="form-control" type="text" id="treatment_customer_nama" name="treatment_customer_nama" placeholder="Nama">
+													<div class="kt-margin-t-10" style="padding:0px;text-align:right;">
+														<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_customer"><i class="flaticon-add"></i>Tambah Pelanggan</button>
+													</div>
 												</div>
 												<div class="form-group row">
-													<label class="col-4 col-form-label kt-margin-t-10">Opsi Treatment :</label>
+													<label class="col-4 col-form-label">Opsi Treatment :</label>
 													<div class="col-8">
-														<div class="kt-checkbox-inline">
-															<label class="kt-checkbox kt-checkbox--brand kt-margin-t-10">
+														<div class="kt-radio-list">
+														</div>
+														<div class="kt-checkbox-list">
+															<label class="kt-checkbox kt-checkbox--brand">
 																<input type="checkbox" name="treatment_type"> Nail Treatment
 																<span></span>
 															</label>
-															<label class="kt-checkbox kt-checkbox--brand kt-margin-t-10">
+															<label class="kt-checkbox kt-checkbox--brand">
 																<input type="checkbox" name="treatment_type"> Eyelash Treatment
 																<span></span>
 															</label>
 														</div>
-														<span class="form-text text-muted"></span>
-														<label class="kt-checkbox kt-margin-t-10">
-															<input type="checkbox" name="treatment_place"> Home Service
-															<span></span>
-														</label>
 													</div>
 												</div>
-												<div style="padding:0px;text-align:center;">
-													<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_customer"><i class="flaticon-add"></i>Tambah Pelanggan</button>
+												<div class="form-group row">
+													<label class="col-4 col-form-label">Tempat Treatment :</label>
+													<div class="col-8">
+														<div class="kt-radio-list">
+															<label class="kt-radio">
+																<input type="radio" name="treatment_place" checked> Studio Treatment
+																<span></span>
+															</label>
+															<label class="kt-radio">
+																<input type="radio" name="treatment_place"> Home Treatment
+																<span></span>
+															</label>
+														</div>
+													</div>
 												</div>
 											</div>
 											<div class="kt-portlet__foot">
@@ -600,7 +612,13 @@ License: You must have a valid license purchased only from themeforest(the above
 	            minLength: 1
 	        }, {
 				display: 'no_hp',
-				source: bloodhound
+				source: bloodhound,
+				templates : {
+					empty: [
+						'<div style="padding: 0px 10px">Customer tidak ditemukan</div>'
+					],
+					suggestion: Handlebars.compile('<div>{{no_hp}} - {{nama}}</div>')
+				}
 			});
 
 			$('#treatment_customer_nohp').on('typeahead:autocompleted typeahead:select', function (e, data) {
@@ -708,9 +726,9 @@ License: You must have a valid license purchased only from themeforest(the above
 	                treatment_type: {
 	                    required: true
 	                },
-	                treatment_place: {
-	                    required: false
-	                }
+					treatment_place: {
+						required: true
+					}
 	            },
 
 	            invalidHandler: function(event, validator) {
